tests/fsharp/typecheck/sigs/neg_byref_11.fs
module Test
#nowarn "1175"
type M3 = { x:byref<int> }             (* trap: byref record fields *)
